Index.html finalizada

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opa</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Curriculo - Gabriel Meiki</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <p>Currículo <br>Gabriel Meiki</p>
+            <ul>
+                <li><a href="abas/identificacao.html" target="main">Identificação</a></li>
+                <li><a href="abas/formacao.html" target="main">Formação</a></li>
+                <li><a href="abas/experiencia.html" target="main">Experiência Profissional</a></li>
+                <li><a href="abas/hobbies.html" target="main">Hobbies</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <iframe src="abas/identificacao.html" width="650px" height="400px" name="main"></iframe>
+    </main>
+    <footer>
+        <p>© Direitos autorais reservados a Gabriel Meiki</p>
+    </footer>
 </body>
 </html>
