Experiencia, formação, indentificação - páginas

--- a/abas/identificacao.html
+++ b/abas/identificacao.html
@@ -1,1 +1,29 @@
-<h2>identificacao</h2>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Identificação</title>
+    <style>
+
+        main{
+            text-align: center;
+        }
+
+        img{
+            height: 250px;
+            width: 250px;
+            border-radius: 50%;
+        }
+    </style>
+</head>
+<body>
+    <main>
+        <img src="https://avatars.githubusercontent.com/u/80109069?v=4" alt="Foto de Gabriel Meiki">
+
+        <h1>Gabriel Meiki</h1>
+        <h2>19 anos</h2>
+        <h2>Desenvolvedor Front End</h2>
+    </main>
+</body>
+</html>
