--- a/abas/experiencia.html
+++ b/abas/experiencia.html
@@ -1,1 +1,72 @@
-<h2>experiencia</h2>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Experiência</title>
+    <style>
+
+        main{
+            text-align: center;
+            padding-top: 10px;
+            padding-left: 60px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+
+        .card{
+            background-color: blue;
+            background-image: linear-gradient(rgb(0, 0, 42), rgb(11, 11, 122));
+            color: white;
+            margin: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            border-radius: 10px;
+            padding: 10px;
+        }
+
+        img{
+            width: 300px;
+            height: 230px;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+
+        p{
+            width: 300px;
+            text-align: center;
+        }
+
+        a{
+            color: white;
+        }
+    </style>
+</head>
+<body>
+    <main>
+        <div class="card">
+            <img src="https://victorb-s.github.io/Juventude-Code/img/GrupoCarrossel.jpg" alt="foto do projeto">
+            <a href="https://victorb-s.github.io/Juventude-Code/" target="_blank">
+                <h2>Vem Ver Pilar</h2>
+            </a>
+            <p>Website responsivo (HTML, CSS e JavaScript) para plataforma de podcast. Apresentado em Hackathon, conquistando o segundo lugar. </p>
+            <p>HTML, CSS, JavaScript</p>
+        </div>
+
+        <div class="card">
+            <img src="https://gabriel-meiki.github.io/Tec-Noticias/img/Pasta_home_img/parallaxx.png" alt="foto do projeto">
+            <a href="https://gabriel-meiki.github.io/Tec-Noticias/" target="_blank">
+                <h2>Tec Noticias</h2>
+            </a>
+            <p>Site noticiário de tecnologia (HTML, CSS, JavaScript) com responsividade e acessibilidade VLibras.</p>
+            <p>HTML, CSS, JavaScript</p>
+        </div>
+        
+    </main>
+</body>
+</html>
