--- a/abas/formacao.html
+++ b/abas/formacao.html
@@ -1,1 +1,42 @@
-<h2>formação</h2>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formação</title>
+    <style>
+
+        main{
+            text-align: center;
+            padding-top: 10px;
+            padding-left: 60px;
+        }
+
+        img{
+            height: 250px;
+            width: 500px;
+            object-fit: cover;
+            border-radius: 5px;
+        }
+
+        ul{
+            list-style-position: inside;
+            text-align: left;
+        }
+
+        li{
+            padding-top: 15px;
+        }
+    </style>
+</head>
+<body>
+    <main>
+        <img src="https://media.istockphoto.com/id/2012747478/pt/foto/businessman-computer-or-programming-code-in-night-office-for-software-development.jpg?s=1024x1024&w=is&k=20&c=8HWaVnmiSKTAG8-vYh0h0WfiN3aUHCJ3XcbThFp2G9o=" alt="">
+
+        <ul>
+            <li><strong>ETE Porto Digital:</strong> Técnico em Desenvolvimento de Sistemas - 2021 a 2023</li>
+            <li><strong>Faculdade Senac:</strong> Tecnólogo em Análise e Desenvolvimento de Sistemas - 2024 a 2026</li>
+        </ul>
+    </main>
+</body>
+</html>
